--- a/Ansible_Vagrant_Boxes/Vagrantfile
+++ b/Ansible_Vagrant_Boxes/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure("2") do |config|
 
     config.vm.define "ansible" do |ansible|
       ansible.vm.box = "ubuntu/bionic64"
-      ansible.vm.network "private_network", type: "dhcp"
+      ansible.vm.network "private_network", ip: "192.168.56.17"
       ansible.vm.provider "virtualbox" do |vb|
        vb.memory = "1024"
        vb.cpus = 1
@@ -17,7 +17,7 @@ end
 
     config.vm.define "web01" do |web01|
         web01.vm.box = "geerlingguy/centos7"
-        web01.vm.network "private_network", type: "dhcp"
+        web01.vm.network "private_network", ip: "192.168.56.18"
         web01.vm.provider "virtualbox" do |vb|
          vb.memory = "1024"
          vb.cpus = 1
@@ -27,7 +27,7 @@ end
 
      config.vm.define "web02" do |web02|
         web02.vm.box = "geerlingguy/centos7"
-        web02.vm.network "private_network", type: "dhcp"
+        web02.vm.network "private_network", ip: "192.168.56.19"
         web02.vm.provider "virtualbox" do |vb|
          vb.memory = "1024"
          vb.cpus = 1
@@ -36,7 +36,7 @@ end
 
      config.vm.define "db01" do |db01|
       db01.vm.box = "geerlingguy/centos7"
-      db01.vm.network "private_network", type: "dhcp"
+      db01.vm.network "private_network", ip: "192.168.56.20"
       db01.vm.provider "virtualbox" do |vb|
        vb.memory = "1024"
        vb.cpus = 1
