--- a/Ansible_Vagrant_Boxes/Vagrantfile
+++ b/Ansible_Vagrant_Boxes/Vagrantfile
@@ -34,6 +34,15 @@ end
     end
 end 
 
+config.vm.define "web03" do |web03|
+    web03.vm.box = "ubuntu/bionic64"
+    web03.vm.network "private_network", ip: "192.168.56.21"
+    web03.vm.provider "virtualbox" do |vb|
+     vb.memory = "1024"
+     vb.cpus = 1
+end
+end 
+
      config.vm.define "db01" do |db01|
       db01.vm.box = "geerlingguy/centos7"
       db01.vm.network "private_network", ip: "192.168.56.20"
