added web03 box/ubuntu

--- a/Ansible_Vagrant_Boxes/Vagrantfile
+++ b/Ansible_Vagrant_Boxes/Vagrantfile
@@ -41,7 +41,10 @@ config.vm.define "web03" do |web03|
      vb.memory = "1024"
      vb.cpus = 1
 end
-end 
+
+web03.vm.provision :shell, :inline => "sudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config; sudo systemctl restart sshd;", run: "always"
+
+end
 
      config.vm.define "db01" do |db01|
       db01.vm.box = "geerlingguy/centos7"
