--- a/Ansible_Pratices/exercise11/provisioning.yaml
+++ b/Ansible_Pratices/exercise11/provisioning.yaml
@@ -64,13 +64,24 @@
         src: templates/ntp_redhat.conf.j2
         dest: /etc/ntp.conf
       when: ansible_os_family == "RedHat"
+      notify:
+        - Restart NTP on RedHat
 
     - name: Deploy NTP conf dile for Debian
       template:
         src: templates/ntp_debian.conf.j2
         dest: /etc/ntp.conf
       when: ansible_os_family == "Debian"
+      notify:
+        - Restart NTP on Debian
 
+    - name: Dir for devp data
+      file:
+        path: /opt/devdata
+        state: directory
+        mode: 0775
+    
+  handlers:
     - name: Restart NTP on RedHat
       service:
         name: ntpd
@@ -85,8 +96,3 @@
         enabled: yes
       when: ansible_os_family == "Debian"
 
-    - name: Dir for devp data
-      file:
-        path: /opt/devdata
-        state: directory
-        mode: 0775
